<resources>
    <string name="app_name">ChatRoom</string>
    <string name="title_activity_register">register</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="click_here_to_register">Click Here to Register</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter password</string>
    <string name="click_here_to_login">Click Here to Login</string>
    <string name="login">Login</string>
    <string name="no_user_found">No User Found</string>
    <string name="write_a_message">Write a Message</string>
    <string name="sendbutton">sendbutton</string>
    <string name="chatroom">ChatRoom</string>
    <string name="harshit">harshit</string>
    <string name="qwqw">qwqw</string>
    <string name="refreshbutton">refresh button</string>
</resources>
